--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,8 @@
 		<license.copyrightOwners>BigDataViewer developers.</license.copyrightOwners>
 
 		<imglib2.version>5.8.0</imglib2.version>
-		<bigdataviewer-core.version>8.0.0</bigdataviewer-core.version>
+		<bigdataviewer-core.version>8.0.1-SNAPSHOT</bigdataviewer-core.version>
+		<ui-behaviour.version>2.0.1</ui-behaviour.version>
 
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>deploy-to-scijava</releaseProfiles>
